# doc_query_rag

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  VECTOR_STORE_PERSISTENCE.md  app.py  benchmarking_outputs.rtf  config.py  main.py  outputs.txt  pyproject.toml  requirements-deploy.txt  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: main.yaml
core/: data_loader.py
index_evaluation/: README.md  benchmark.py  evaluation.py  test_queries.txt  vector_stores.py
notebooks/: rag_pipeline.ipynb
pipelines/: rag_pipeline.py
report/: research_QA_bot.docx
static/: index.html
